--- a/styles/atom-file-toc.less
+++ b/styles/atom-file-toc.less
@@ -5,4 +5,17 @@
 @import "ui-variables";
 
 .atom-file-toc {
+  height:100%;
+  max-height:100%;
+  overflow:auto;
+}
+
+.atom-file-toc-item {
+  cursor:default;
+  line-height:1.6;
+}
+
+.atom-file-toc-item:hover {
+  background-color:@background-color-highlight;
+  color:@text-color-highlight;
 }
