updated toc design and cleanup

--- a/styles/atom-file-toc.less
+++ b/styles/atom-file-toc.less
@@ -14,7 +14,14 @@
 
 .atom-file-toc-container {
   display:flex;
+  flex-direction:column;
 }
+
+.atom-file-toc-body {
+  display:flex;
+  flex-direction:column;
+}
+
 
 .atom-file-toc-gutter {
   width:max-content;
